--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 .img-kciuk{
 width: 300px;
 legth: 200px;
-    background-image: url(kciuk.png);
-    backround-size: 100%;
+  image: url(kciuk.png);
+   size: 100%;
 }
 }
