--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 .img-kciuk{
 width: 300px;
 legth: 200px;
-  image: url("kciuk.png");
-   size: 100%;
+  background-image: url("kciuk.png");
+   background-size: 100%;
 }
 }
