--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ background-image: url("marmurek.webp");
 background-position: center; 
     border-style: groove;
     border-width: 50;
+
+    display: flex;
+    justify-content: center;
 }
 .center-text {
     text-align: center;
@@ -23,4 +26,26 @@ height: 300px;
    background-size: 100%;
     background-position: center;
 }
+.image-container {
+    overflow: hidden;
+    width: 100%;
+    max-width: 600px; /* Maksymalna szerokość kontenera */
+    height: auto;
+}
+
+.moving-image {
+    width: 100%; /* Dopasowanie szerokości obrazka do kontenera */
+    animation: moveHorizontally 10s linear infinite;
+}
+
+@keyframes moveHorizontally {
+    0% {
+        transform: translateX(-100%);
+    }
+    50% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(100%);
+    }
 
