--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@ background-position: center;
 .center-text {
     text-align: center;
 }
+.Obrazek{
+width:400px;
+    height:300px;
+    background-position: cover;
+}
 
 .img-kciuk{
 
