--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body
 {
     background-color:aquamarine;
 background-image: url("marmurek.webp");
-background-position: center; 
+background-position: left; 
     border-style: groove;
     border-width: 50;
 
