--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ width:500px;
     background-repeat: no-repeat;
     background-position: center;
 }
-
+/*
 .img-kciuk{
 
 }
@@ -57,3 +57,4 @@ width:500px;
         transform: translateX(100%);
     }
 
+*/
